<resources>
    <string name="app_name">Wallet</string>
    <string name="intro_text">Welcome Back,</string>
    <string name="user_name">ABUBAKER</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_balance_value">$3,729.00</string>
    <string name="pay">Pay</string>
    <string name="transfer">Transfer</string>
    <string name="bills">Bills</string>
    <string name="transaction">Transaction</string>
    <string name="see_all">See All</string>
    <string name="netflix">Netflix</string>
    <string name="transaction_time">15 Dec - 6:20 AM</string>
    <string name="_14_99">-$14,99</string>
    <string name="spotify_family">Spotify Family</string>
</resources>