<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        >

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:textColor="#fff"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.04"
            android:text="@string/user_name"
            android:textColor="#fff"
            android:textSize="28sp"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/profile"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_view"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingTop="50dp"
            android:text="@string/total_balance"
            android:textColor="#fff"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/total_balance_value"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#ff5d9e"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/coin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pay"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            app:cardBackgroundColor="#8f71ff"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/transfer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/transfer"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            app:cardBackgroundColor="#3fefef"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/wallet"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bills"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.02"
            android:text="@string/transaction"
            android:textColor="#516b9e"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/see_all"
            android:textColor="#D06D88BD"
            android:textSize="23sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            >

            <ImageView
                android:id="@+id/i1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/netflix"
                />

            <TextView
                android:id="@+id/tt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i1"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.03"
                android:text="@string/netflix"
                android:textColor="#516b9e"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tt1"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i1"
                android:text="@string/transaction_time"
                android:textColor="#516b9e"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="@string/_14_99"
                android:textColor="#516b9e"
                android:textSize="23sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r1"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            >

            <ImageView
                android:id="@+id/i2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/spotify"
                />

            <TextView
                android:id="@+id/tt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i2"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.03"
                android:text="@string/spotify_family"
                android:textColor="#516b9e"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tt2"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i2"
                android:text="@string/transaction_time"
                android:textColor="#516b9e"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="-$14,99"
                android:textColor="#516b9e"
                android:textSize="23sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r2"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            >

            <ImageView
                android:id="@+id/i3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/dribble"
                />

            <TextView
                android:id="@+id/tt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i3"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.03"
                android:text="Dribble Pro"
                android:textColor="#516b9e"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tt3"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i3"
                android:text="@string/transaction_time"
                android:textColor="#516b9e"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="-$14,99"
                android:textColor="#516b9e"
                android:textSize="23sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r3"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            >

            <ImageView
                android:id="@+id/i4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/amazon"
                />

            <TextView
                android:id="@+id/tt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i4"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.03"
                android:text="Amazon"
                android:textColor="#516b9e"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tt4"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/i4"
                android:text="@string/transaction_time"
                android:textColor="#516b9e"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="-$14,99"
                android:textColor="#516b9e"
                android:textSize="23sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:src="@drawable/home"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:src="@drawable/chat"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:src="@drawable/notification"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:src="@drawable/user"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>